Fix pagination not showing bug
- Show show shorter description
- Fix max image width to avoid overlapping

--- a/src/assets/css/card.css
+++ b/src/assets/css/card.css
@@ -3,7 +3,7 @@
 }
 
 img {
-  width: 270px;
+  max-width: 270px;
   height: 160px;
   object-fit: cover;
   border-radius: 5px;
